--- a/style.css
+++ b/style.css
@@ -1,64 +1,54 @@
 body {
     font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #F2A900;
+    background-color: #f99e4e;
 }
 
+/* Timeline */
 .timeline {
     position: relative;
-    max-width: 600px;
+    max-width: 75%;
     margin: 0 auto;
 }
 
+/* Timeline Line */
 .timeline::after {
     content: '';
     position: absolute;
     width: 6px;
-    background-color: #007BFF;
+    background-color: #5B2F00;
     top: 0;
     bottom: 0;
-    left: 50%;
+    left: 40px;
     margin-left: -3px;
 }
 
+/* Timeline Content */
 .timeline-event {
     padding: 10px;
     position: relative;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.4);
     border: 1px solid #ddd;
-    border-radius: 5px;
-    width: 45%;
-    margin-bottom: 20px;
+    border-radius: 4px;
+    width: 100%;
+    margin-bottom: 100px;
+    left: 60px;
 }
 
-.timeline-event.left {
-    left: 0;
-}
-
-.timeline-event.right {
-    left: 50%;
-}
-
+/* Timeline Point */
 .timeline-event::before {
     content: '';
     position: absolute;
     width: 12px;
     height: 12px;
-    background-color: white;
+    background-color: #F2A900;
     border: 2px solid #5B2F00;
     border-radius: 50%;
     top: 15px;
+    left: -30px;
     z-index: 1;
 }
 
-.timeline-event.left::before {
-    right: -6px;
-}
-
-.timeline-event.right::before {
-    left: -6px;
-}
-
+/* Text */
 .website-title {
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
@@ -74,5 +64,57 @@ body {
     font-weight: 400;
     font-size: 48px;
     font-style: normal;
+    text-align: start;
+    padding: 20px;
+}
+
+/* Change Language Button */
+button {
+    margin: 8px;
+    padding: 8px 16px;
+    font-size: 24px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+button:hover {
+    background-color: #F2A900;
+}
+
+/* Banner */
+.banner-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.banner {
+    width: 70%;
+    height: auto;
+}
+
+.change-language-container {
+    display: flex;
+    justify-content: end;
+}
+
+/* Footer */
+.footer {
     text-align: center;
+    padding: 10px 0;
+    background-color: #f8f8f8;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+
+.footer a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
