--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 
 /* Text */
 .website-title {
-    font-family: "Pixelify Sans", sans-serif;
+    font-family: "Noto Sans Thai Looped", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-size: 72px;
@@ -59,7 +59,7 @@ body {
 }
 
 .website-description {
-    font-family: "Pixelify Sans", sans-serif;
+    font-family: "Noto Sans Thai Looped", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-size: 48px;
